[gd_scene load_steps=9 format=2]

[ext_resource path="res://spaceshooter/PNG/playerShip1_blue.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://spaceshooter/Bonus/sfx_laser1.ogg" type="AudioStream" id=3]
[ext_resource path="res://spaceshooter/PNG/Damage/playerShip1_damage1.png" type="Texture" id=4]
[ext_resource path="res://spaceshooter/PNG/Damage/playerShip1_damage3.png" type="Texture" id=5]
[ext_resource path="res://spaceshooter/PNG/Damage/playerShip1_damage2.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.9169, 19.3912 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.0374, 24.2607 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 24
script = ExtResource( 2 )

[node name="PlayerShip" type="Sprite" parent="."]
modulate = Color( 1.1, 1.2, 1.2, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Positions" type="Node2D" parent="."]
visible = false

[node name="LeftShooter" type="Position2D" parent="Positions"]
position = Vector2( -23.3182, -2.5591 )

[node name="RightShooter" type="Position2D" parent="Positions"]
position = Vector2( 23.3101, -2.68242 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -0.0936432, 27.906 )
scale = Vector2( 2.67623, 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 88

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="HealthRegenTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.049

[node name="PlayerShip1Damage1" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="PlayerShip1Damage2" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="PlayerShip1Damage3" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="BulletMultiplier" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="HealthRegenTimer" to="." method="_on_HealthRegenTimer_timeout"]
[connection signal="timeout" from="BulletMultiplier" to="." method="_on_BulletMultiplier_timeout"]
